Dockerfile ajustado